2008-11-11  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Added mta_user parameter who defines
	mail address used for alerts.

	* pandora_ctl: General control script to start/stop Pandora FMS
	daemons.

	* util/SLES10/*: Alternative start/stop daemons for SUSE and
	other systems that don't work fine with standard scripts.

2008-11-08  Sancho Lerena <slerena@gmail.com>

        * Config.pm: Fixed bug parsing config options with more
        than 2 digits. Thanks to Glen Eustace.

2008-11-07  Sancho Lerena <slerena@artica.es>

        * bin/pandora_server: Fixed an important problem detected
        in Keepalive module, present since revision #678.

2008-11-04  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_snmpconsole: Added support for extended trap information
	  (enterprise version).

	* bin/pandora_network: Updated function header.

2008-11-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/DB.pm,
	  lib/PandoraFMS/Tools.pm,
	  bin/pandora_snmpconsole: Added support for enterprise version
	  features.

2008-10-30  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm:  Some people reports problems with 
	server stop detection. This could help, because has optimized
	way to detect servers, but is not a bugfix because I cannot 
	reproduce the problem.

	* Config.pm: Updated version.

	* server/Launcher scripts: Updated version.

2008-10-22  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* bin/pandora_snmpconsole: Feature request #2166257

2008-10-20  Esteban Sanchez  <estebans@artica.es>

	* lib/PandoraFMS/DB.pm: Fixed a strange bug that was causing to
	generate events of servers going down, the solution was to update
	own keepalive before checking others server status. Tab style
	correction, replacing blankspaces with tab.

2008-10-20  Manuel Arostegui <marostegui@artica.es>

	* pandora_server_installer: Added dependency

2008-10-16  Sancho Lerena <slerena@artica.es>

	* Config.pm: Version update.
